--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -56,7 +56,7 @@
     <div id="userDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600 ">
       <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
         <div>Rafael Fernández</div>
-        <div class="font-medium truncate">rfernandez@ficodes.com</div>
+        <div class="font-medium truncate">rfernandez&#64;ficodes.com</div>
       </div>
       <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
         <li>
