--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -33,7 +33,7 @@
               </li>
             </ul>
             <div class="py-1">
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-secondary-50 dark:text-gray-400 dark:hover:text-primary-100">See all</a>
+              <a href="search" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-secondary-50 dark:text-gray-400 dark:hover:text-primary-100">See all</a>
             </div>
           </div>
         </li>
