ADD view details modal + add to cart toast

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
+
+<div class="static p-4">
 <!-- Jumbo section -->
 <section id="jumbo" class="">
     <div class="pt-8 px-4 mx-auto max-w-screen-xl text-center lg:pt-16 lg:px-12">
@@ -61,3 +63,7 @@
   
   <bae-off-gallery></bae-off-gallery>
   <bae-off-featured></bae-off-featured>
+
+
+
+
