--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -4,11 +4,11 @@
 <section id="jumbo" class="">
     <div class="pt-8 px-4 mx-auto max-w-screen-xl text-center lg:pt-16 lg:px-12">
       <a href="#" class="inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm text-gray-700 bg-gray-100 rounded-full dark:bg-gray-800 dark:text-white hover:bg-secondary-50 dark:hover:bg-gray-700" role="alert">
-        <span class="text-xs bg-primary-100 rounded-full text-white px-4 py-1.5 mr-3">New</span> <span class="text-sm font-medium">DOME MARKETPLACE is out! See what's new</span>
+        <span class="text-xs bg-primary-100 rounded-full text-white px-4 py-1.5 mr-3">New</span> <span class="text-sm font-medium">{{ 'DASHBOARD._title' | translate }}</span>
         <svg class="ml-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
       </a>
-      <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-primary-100 md:text-5xl lg:text-6xl dark:text-secondary-50">A Distributed Open Marketplace for Cloud and Edge Services</h1>
-      <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-secondary-50">Welcome to the first open distributed marketplace ecosystem for cloud & edge services in Europe.</p>
+      <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-primary-100 md:text-5xl lg:text-6xl dark:text-secondary-50">{{ 'DASHBOARD._header' | translate }}</h1>
+      <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-secondary-50">{{ 'DASHBOARD._subheader' | translate }}</p>
       <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
         <a href="https://dome-marketplace.eu/" target="_blank" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
           Learn more
