--- a/src/app/shared/categories-filter/categories-filter.component.html
+++ b/src/app/shared/categories-filter/categories-filter.component.html
@@ -6,7 +6,7 @@
     <svg class="w-2 h-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
     </svg>
-    <span class="sr-only">Remove badge</span>
+    <span class="sr-only">{{ 'CATEGORIES_FILTER._remove_badge' | translate }}</span>
     </button>
   </span>
 }
