ENHANCES style, ADDS services for local storage and event messaging

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-
-<bae-header></bae-header>
-<main class="bae-content">
-    <router-outlet></router-outlet>    
+<bae-header class="fixed w-full z-20 top-0 start-0"></bae-header>
+<main class="container mx-auto pt-[118px]">
+    <router-outlet></router-outlet>
 </main>
 <bae-footer></bae-footer>
-
-
-
